# osrsreboxed-db

./: mise.toml  pyproject.toml
builders/items/: builder.py
builders/monsters/: builder.py
data/schemas/: schema-monsters.json
scripts/cache/: download_cache.py
scripts/wiki/: wiki_page_text.py
