[project]
authors = [
    {name = "Neffarion", email = "main@neffware.com"},
    {name = "PH01L", email = "phoil@osrsbox.com"},
]
license = {text = "GPL-3.0-only"}
requires-python = "<4.0,>=3.7"
dependencies = [
    "cerberus>=1.3.5",
    "dataclasses>=0,<1",
    "dateparser>=1.2.0",
    "deepdiff>=6.7.1",
    "flake8>=5.0.4",
    "mwparserfromhell>=0.6.5",
    "pytest>=7.4.4",
    "requests>=2.31.0",
]
name = "osrsreboxed"
version = "2.3.33"
description = "A complete and up-to-date database of Old School Runescape (OSRS) items, monsters and prayers accessible using a Python API."
readme = "README.md"

[dependency-groups]
dev = [
    "setuptools==60.0.0",
]

[project.urls]
homepage = "https://github.com/0xNeffarion/osrsreboxed-db"
repository = "https://github.com/0xNeffarion/osrsreboxed-db"
